--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,29 @@
-APScheduler==3.10.4
-bcrypt==4.1.3
-blinker==1.8.2
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-Flask==3.0.3
-Flask-SQLAlchemy==3.1.1
-greenlet==3.0.3
-gunicorn==22.0.0
-idna==3.7
-itsdangerous==2.2.0
-Jinja2==3.1.4
-mailjet-rest==1.3.4
-MarkupSafe==2.1.5
-packaging==24.0
-passlib==1.7.4
-PyMySQL==1.1.0
-python-dotenv==1.0.1
-pytz==2024.1
-requests==2.31.0
-six==1.16.0
-SQLAlchemy==2.0.30
-typing_extensions==4.11.0
-tzdata==2024.1
-tzlocal==5.2
-urllib3==2.2.1
-Werkzeug==3.0.3
+APScheduler
+bcrypt
+blinker
+certifi
+charset-normalizer
+click
+colorama
+Flask
+Flask-SQLAlchemy
+greenlet
+gunicorn
+idna
+itsdangerous
+Jinja2
+mailjet-rest
+MarkupSafe
+packaging
+passlib
+PyMySQL
+python-dotenv
+pytz
+requests
+six
+SQLAlchemy
+typing_extensions
+tzdata
+tzlocal
+urllib3
+Werkzeug
